[package]
name = "p2p_handshake_server"
version = "0.2.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A P2P network server implementation in Rust"
license = "MIT"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
log = "0.4"
env_logger = "0.10"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
futures = "0.3"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"

[lib]
name = "p2p_handshake_server"
path = "src/lib.rs"

[[bin]]
name = "p2p_server"
path = "src/main.rs"

[[example]]
name = "simple_client"
path = "examples/simple_client.rs"