[package]
name = "p2p_handshake_server"
version = "0.2.0"
edition = "2024"
authors = ["xiaoyang <xiaoyang@ur-xiaoyang.com>"]
description = "A P2P network server implementation in Rust"
license = "Apache license v2.0"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
uuid = { version = "1.0", features = ["v4", "serde"] }
log = "0.4"
env_logger = "0.10"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
# STUN/ICE 相关依赖
# 使用更简单的实现，先手动实现基本的STUN功能

[dev-dependencies]
env_logger = "0.10"
tokio-test = "0.4"

[lib]
name = "p2p_handshake_server"
path = "src/lib.rs"

[[bin]]
name = "p2p_server"
path = "src/main.rs"

## 移除所有客户端示例，保留纯服务端构建